Создано с помощью Colaboratory

--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbeGW6lPeiy9nKZPit4dai",
+      "authorship_tag": "ABX9TyMu0SZmW8BHuNnG3m1tV4v5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# !pip install pyspark"
+        "!pip install pyspark"
       ],
       "metadata": {
         "id": "yXOiEmERX6a0",
-        "outputId": "2affd122-3364-4121-f1c3-934bc5c64006",
+        "outputId": "ee576877-7388-433a-9965-fdddcb55d8a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -47,14 +47,14 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
             "  Downloading pyspark-3.3.2.tar.gz (281.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.4/281.4 MB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.4/281.4 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting py4j==0.10.9.5\n",
             "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.7/199.7 KB\u001b[0m \u001b[31m17.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.7/199.7 KB\u001b[0m \u001b[31m22.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.3.2-py2.py3-none-any.whl size=281824028 sha256=ac2b66b696fc04e2745131d26738964ab33173a0c75cad90701f6fc2233d4fa8\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.2-py2.py3-none-any.whl size=281824028 sha256=39b930238b0024fa63326fa4d5a6359fdf201138448da4682083b3d4dafb8ed4\n",
             "  Stored in directory: /root/.cache/pip/wheels/6c/e3/9b/0525ce8a69478916513509d43693511463c6468db0de237c86\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
@@ -86,28 +86,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yp88cnmRO9g8",
-        "outputId": "f47b8bec-78ce-4794-df20-12c0a7d22b3a"
+        "outputId": "fe59ee90-11b6-42ae-cf43-952f0ba4c4fd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n",
-            "                                                Name  \\\n",
-            "0                      10-Day Green Smoothie Cleanse   \n",
-            "1                                  11/22/63: A Novel   \n",
-            "2            12 Rules for Life: An Antidote to Chaos   \n",
-            "3                             1984 (Signet Classics)   \n",
-            "4  5,000 Awesome Facts (About Everything!) (Natio...   \n",
-            "\n",
-            "                     Author  User Rating  Reviews  Price  Year        Genre  \n",
-            "0                  JJ Smith          4.7    17350      8  2016  Non Fiction  \n",
-            "1              Stephen King          4.6     2052     22  2011      Fiction  \n",
-            "2        Jordan B. Peterson          4.7    18979     15  2018  Non Fiction  \n",
-            "3             George Orwell          4.7    21424      6  2017      Fiction  \n",
-            "4  National Geographic Kids          4.8     7665     12  2019  Non Fiction  \n",
-            "(550, 7)\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -136,35 +122,48 @@
       "metadata": {
         "id": "r1yQLXe6Qngg"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "csv_file = path + file_name\n",
-        "df = sc.read.csv(csv_file)"
+        "df = spark.read.csv(csv_file)"
       ],
       "metadata": {
-        "id": "SHKzMEqlodNG",
-        "outputId": "2862f3c2-6b5d-46d5-f0d3-8f06e8d2c842",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 187
-        }
+        "id": "SHKzMEqlodNG"
       },
       "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head(5)"
+      ],
+      "metadata": {
+        "id": "8EKr89-OqvXB",
+        "outputId": "95b2e04d-d287-4fe7-e493-af1d08516eca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-23fa8b4f0faa>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcsv_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfile_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsv_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'SparkContext' object has no attribute 'read'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(_c0='Name', _c1='Author', _c2='User Rating', _c3='Reviews', _c4='Price', _c5='Year', _c6='Genre'),\n",
+              " Row(_c0='10-Day Green Smoothie Cleanse', _c1='JJ Smith', _c2='4.7', _c3='17350', _c4='8', _c5='2016', _c6='Non Fiction'),\n",
+              " Row(_c0='11/22/63: A Novel', _c1='Stephen King', _c2='4.6', _c3='2052', _c4='22', _c5='2011', _c6='Fiction'),\n",
+              " Row(_c0='12 Rules for Life: An Antidote to Chaos', _c1='Jordan B. Peterson', _c2='4.7', _c3='18979', _c4='15', _c5='2018', _c6='Non Fiction'),\n",
+              " Row(_c0='1984 (Signet Classics)', _c1='George Orwell', _c2='4.7', _c3='21424', _c4='6', _c5='2017', _c6='Fiction')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     }
