--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMu0SZmW8BHuNnG3m1tV4v5",
+      "authorship_tag": "ABX9TyP430kp5QQ8jwrPUaTaBnXx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,7 +112,10 @@
       "cell_type": "code",
       "source": [
         "import pyspark\n",
+        "from pyspark.sql import Row\n",
         "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql.functions import mean, stddev, round as _round\n",
+        "\n",
         "spark_session = SparkSession.builder.getOrCreate()\n",
         "spark = SparkSession.builder\\\n",
         "        .master(\"local[*]\")\\\n",
@@ -122,50 +125,77 @@
       "metadata": {
         "id": "r1yQLXe6Qngg"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "csv_file = path + file_name\n",
-        "df = spark.read.csv(csv_file)"
+        "df = spark.read.csv(csv_file, header=True,)"
       ],
       "metadata": {
         "id": "SHKzMEqlodNG"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df.head(5)"
+        "df.show()"
       ],
       "metadata": {
-        "id": "8EKr89-OqvXB",
-        "outputId": "95b2e04d-d287-4fe7-e493-af1d08516eca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8EKr89-OqvXB",
+        "outputId": "306900b3-a00a-4e98-d8cb-e33cf44a896c"
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[Row(_c0='Name', _c1='Author', _c2='User Rating', _c3='Reviews', _c4='Price', _c5='Year', _c6='Genre'),\n",
-              " Row(_c0='10-Day Green Smoothie Cleanse', _c1='JJ Smith', _c2='4.7', _c3='17350', _c4='8', _c5='2016', _c6='Non Fiction'),\n",
-              " Row(_c0='11/22/63: A Novel', _c1='Stephen King', _c2='4.6', _c3='2052', _c4='22', _c5='2011', _c6='Fiction'),\n",
-              " Row(_c0='12 Rules for Life: An Antidote to Chaos', _c1='Jordan B. Peterson', _c2='4.7', _c3='18979', _c4='15', _c5='2018', _c6='Non Fiction'),\n",
-              " Row(_c0='1984 (Signet Classics)', _c1='George Orwell', _c2='4.7', _c3='21424', _c4='6', _c5='2017', _c6='Fiction')]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------------+--------------------+-----------+-------+-----+----+-----------+\n",
+            "|                Name|              Author|User Rating|Reviews|Price|Year|      Genre|\n",
+            "+--------------------+--------------------+-----------+-------+-----+----+-----------+\n",
+            "|10-Day Green Smoo...|            JJ Smith|        4.7|  17350|    8|2016|Non Fiction|\n",
+            "|   11/22/63: A Novel|        Stephen King|        4.6|   2052|   22|2011|    Fiction|\n",
+            "|12 Rules for Life...|  Jordan B. Peterson|        4.7|  18979|   15|2018|Non Fiction|\n",
+            "|1984 (Signet Clas...|       George Orwell|        4.7|  21424|    6|2017|    Fiction|\n",
+            "|5,000 Awesome Fac...|National Geograph...|        4.8|   7665|   12|2019|Non Fiction|\n",
+            "|A Dance with Drag...| George R. R. Martin|        4.4|  12643|   11|2011|    Fiction|\n",
+            "|A Game of Thrones...| George R. R. Martin|        4.7|  19735|   30|2014|    Fiction|\n",
+            "|A Gentleman in Mo...|         Amor Towles|        4.7|  19699|   15|2017|    Fiction|\n",
+            "|A Higher Loyalty:...|         James Comey|        4.7|   5983|    3|2018|Non Fiction|\n",
+            "|A Man Called Ove:...|     Fredrik Backman|        4.6|  23848|    8|2016|    Fiction|\n",
+            "|A Man Called Ove:...|     Fredrik Backman|        4.6|  23848|    8|2017|    Fiction|\n",
+            "|A Patriot's Histo...|    Larry Schweikart|        4.6|    460|    2|2010|Non Fiction|\n",
+            "|A Stolen Life: A ...|       Jaycee Dugard|        4.6|   4149|   32|2011|Non Fiction|\n",
+            "|A Wrinkle in Time...|   Madeleine L'Engle|        4.5|   5153|    5|2018|    Fiction|\n",
+            "|Act Like a Lady, ...|        Steve Harvey|        4.6|   5013|   17|2009|Non Fiction|\n",
+            "|Adult Coloring Bo...|Adult Coloring Bo...|        4.5|   2313|    4|2016|Non Fiction|\n",
+            "|Adult Coloring Bo...|  Blue Star Coloring|        4.6|   2925|    6|2015|Non Fiction|\n",
+            "|Adult Coloring Bo...|  Blue Star Coloring|        4.4|   2951|    6|2015|Non Fiction|\n",
+            "|Adult Coloring Bo...|Coloring Books fo...|        4.5|   2426|    8|2015|Non Fiction|\n",
+            "|  Alexander Hamilton|         Ron Chernow|        4.8|   9198|   13|2016|Non Fiction|\n",
+            "+--------------------+--------------------+-----------+-------+-----+----+-----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "swUHTvhbxpc2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
