Создано с помощью Colaboratory

--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFTG4K6EPWv1x7uIeXeT8c",
+      "authorship_tag": "ABX9TyOefjcRE3KJzga81m1FkX55",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,12 +33,12 @@
       ],
       "metadata": {
         "id": "yXOiEmERX6a0",
-        "outputId": "ee576877-7388-433a-9965-fdddcb55d8a0",
+        "outputId": "6466bec4-0840-4c46-d858-d0df231cf9da",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -46,47 +46,30 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
-            "  Downloading pyspark-3.3.2.tar.gz (281.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.4/281.4 MB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading pyspark-3.4.0.tar.gz (310.8 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m310.8/310.8 MB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting py4j==0.10.9.5\n",
-            "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.7/199.7 KB\u001b[0m \u001b[31m22.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
+            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.9/dist-packages (from pyspark) (0.10.9.7)\n",
+            "Building wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.3.2-py2.py3-none-any.whl size=281824028 sha256=39b930238b0024fa63326fa4d5a6359fdf201138448da4682083b3d4dafb8ed4\n",
-            "  Stored in directory: /root/.cache/pip/wheels/6c/e3/9b/0525ce8a69478916513509d43693511463c6468db0de237c86\n",
+            "  Created wheel for pyspark: filename=pyspark-3.4.0-py2.py3-none-any.whl size=311317145 sha256=6f9cb0c7271c8628904c24fec6724b75469332fe39252caab20d9a345dd1b785\n",
+            "  Stored in directory: /root/.cache/pip/wheels/9f/34/a4/159aa12d0a510d5ff7c8f0220abbea42e5d81ecf588c4fd884\n",
             "Successfully built pyspark\n",
-            "Installing collected packages: py4j, pyspark\n",
-            "  Attempting uninstall: py4j\n",
-            "    Found existing installation: py4j 0.10.9.7\n",
-            "    Uninstalling py4j-0.10.9.7:\n",
-            "      Successfully uninstalled py4j-0.10.9.7\n",
-            "Successfully installed py4j-0.10.9.5 pyspark-3.3.2\n"
+            "Installing collected packages: pyspark\n",
+            "Successfully installed pyspark-3.4.0\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !pip install py4j"
-      ],
-      "metadata": {
-        "id": "PeUuJsL9X9vC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yp88cnmRO9g8",
-        "outputId": "fe59ee90-11b6-42ae-cf43-952f0ba4c4fd"
+        "outputId": "55caf296-7e8c-43b1-b7e9-5940ae3b332f"
       },
       "outputs": [
         {
@@ -116,16 +99,19 @@
         "from pyspark.sql import SparkSession\n",
         "from pyspark.sql.functions import mean, stddev, round as _round\n",
         "\n",
-        "spark_session = SparkSession.builder.getOrCreate()\n",
+        "\n",
+        "# sc = pyspark.SparkContext()\n",
+        "# spark_session = SparkSession.builder.getOrCreate()\n",
+        "\n",
         "spark = SparkSession.builder\\\n",
         "        .master(\"local[*]\")\\\n",
-        "        .appName('PySpark_Tutorial')\\\n",
+        "        .appName('Hw6.1')\\\n",
         "        .getOrCreate()"
       ],
       "metadata": {
         "id": "r1yQLXe6Qngg"
       },
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -137,7 +123,7 @@
       "metadata": {
         "id": "SHKzMEqlodNG"
       },
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -150,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8EKr89-OqvXB",
-        "outputId": "306900b3-a00a-4e98-d8cb-e33cf44a896c"
+        "outputId": "7e2502d7-9fab-44db-e293-42af422bb1c3"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,13 +175,44 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Используя только RDD вычислить среднюю цену всех книг, у которых рейтинг выше 4.7"
+      ],
       "metadata": {
-        "id": "swUHTvhbxpc2"
+        "id": "5wMh3-TFYuip"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.printSchema()"
+      ],
+      "metadata": {
+        "id": "swUHTvhbxpc2",
+        "outputId": "ace66000-2931-460c-c793-e33601e29148",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- Name: string (nullable = true)\n",
+            " |-- Author: string (nullable = true)\n",
+            " |-- User Rating: string (nullable = true)\n",
+            " |-- Reviews: string (nullable = true)\n",
+            " |-- Price: string (nullable = true)\n",
+            " |-- Year: string (nullable = true)\n",
+            " |-- Genre: string (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
