Создано с помощью Colaboratory

--- a/Hw6.1.ipynb
+++ b/Hw6.1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgbbo361Zp/egB4n3FLxcM",
+      "authorship_tag": "ABX9TyPBp3iVjZdS/uF9DnBY4tIR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,6 +230,118 @@
             " |-- Price: string (nullable = true)\n",
             " |-- Year: string (nullable = true)\n",
             " |-- Genre: string (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "_V-x9FdZvu0h",
+        "outputId": "d03b1840-fddc-41ea-8dbf-817110211930",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('name', 'string'),\n",
+              " ('author', 'string'),\n",
+              " ('user_rating', 'float'),\n",
+              " ('reviews', 'int'),\n",
+              " ('price', 'float'),\n",
+              " ('year', 'int'),\n",
+              " ('genre', 'string')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.describe().show()"
+      ],
+      "metadata": {
+        "id": "v5-REp-T28GV",
+        "outputId": "71f5004c-d815-4555-8fc8-578d297e7131",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+--------------------+----------------+-------------------+------------------+------------------+------------------+-----------+\n",
+            "|summary|                name|          author|        user_rating|           reviews|             price|              year|      genre|\n",
+            "+-------+--------------------+----------------+-------------------+------------------+------------------+------------------+-----------+\n",
+            "|  count|                 550|             550|                550|               550|               550|               550|        550|\n",
+            "|   mean|                null|            null| 4.6183636452934955|11953.281818181818|              13.1|            2014.0|       null|\n",
+            "| stddev|                null|            null|0.22698038875323445|11731.132017431892|10.842261978422364|3.1651563841692782|       null|\n",
+            "|    min|\"The Plant Parado...|Abraham Verghese|                3.3|                37|               0.0|              2009|    Fiction|\n",
+            "|    max|You Are a Badass:...|    Zhi Gang Sha|                4.9|             87841|             105.0|              2019|Non Fiction|\n",
+            "+-------+--------------------+----------------+-------------------+------------------+------------------+------------------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.filter(df.user_rating >= 4.7).show()"
+      ],
+      "metadata": {
+        "id": "i27gnEVO30r8",
+        "outputId": "d4d11846-6937-4e8b-e4d8-57a943e18b92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------------+--------------------+-----------+-------+-----+----+-----------+\n",
+            "|                name|              author|user_rating|reviews|price|year|      genre|\n",
+            "+--------------------+--------------------+-----------+-------+-----+----+-----------+\n",
+            "|5,000 Awesome Fac...|National Geograph...|        4.8|   7665| 12.0|2019|Non Fiction|\n",
+            "|  Alexander Hamilton|         Ron Chernow|        4.8|   9198| 13.0|2016|Non Fiction|\n",
+            "|Barefoot Contessa...|          Ina Garten|        4.8|   1296| 24.0|2012|Non Fiction|\n",
+            "|            Becoming|      Michelle Obama|        4.8|  61133| 11.0|2018|Non Fiction|\n",
+            "|            Becoming|      Michelle Obama|        4.8|  61133| 11.0|2019|Non Fiction|\n",
+            "|Being Mortal: Med...|        Atul Gawande|        4.8|  11113| 15.0|2015|Non Fiction|\n",
+            "|Brown Bear, Brown...|     Bill Martin Jr.|        4.9|  14344|  5.0|2017|    Fiction|\n",
+            "|Brown Bear, Brown...|     Bill Martin Jr.|        4.9|  14344|  5.0|2019|    Fiction|\n",
+            "|Cabin Fever (Diar...|         Jeff Kinney|        4.8|   4505|  0.0|2011|    Fiction|\n",
+            "|Can't Hurt Me: Ma...|       David Goggins|        4.8|  16244| 18.0|2019|Non Fiction|\n",
+            "|Creative Haven Cr...|     Marjorie Sarnat|        4.8|   4022|  4.0|2015|Non Fiction|\n",
+            "|Creative Haven Ow...|     Marjorie Sarnat|        4.8|   3871|  5.0|2015|Non Fiction|\n",
+            "|Daring Greatly: H...|        Brené Brown|        4.8|   1329| 10.0|2013|Non Fiction|\n",
+            "|Dear Zoo: A Lift-...|        Rod Campbell|        4.8|  10922|  5.0|2015|    Fiction|\n",
+            "|Dear Zoo: A Lift-...|        Rod Campbell|        4.8|  10922|  5.0|2016|    Fiction|\n",
+            "|Dear Zoo: A Lift-...|        Rod Campbell|        4.8|  10922|  5.0|2017|    Fiction|\n",
+            "|Dear Zoo: A Lift-...|        Rod Campbell|        4.8|  10922|  5.0|2018|    Fiction|\n",
+            "|Diary of a Wimpy ...|         Jeff Kinney|        4.8|   6812|  0.0|2013|    Fiction|\n",
+            "|Diary of a Wimpy ...|         Jeff Kinney|        4.8|   3837| 15.0|2009|    Fiction|\n",
+            "|Diary of a Wimpy ...|         Jeff Kinney|        4.8|   6540| 22.0|2014|    Fiction|\n",
+            "+--------------------+--------------------+-----------+-------+-----+----+-----------+\n",
+            "only showing top 20 rows\n",
             "\n"
           ]
         }
